# rfc-spec-tester

./: .gitignore  README.md  pyproject.toml
docs/: THESIS_NOTES.md
examples/: minipop_server.py  minipop_spec.txt
src/rfc2spec/: cli.py
src/rfc2spec/extract/: element_extractor.py  merge.py  section_filter.py
src/rfc2spec/llm/: base.py  prompts.py  registry.py  retry.py
src/rfc2spec/llm/providers/: mock.py
src/rfc2spec/model/: graph.py  mtp.py
src/rfc2spec/models/: schemas.py
src/rfc2spec/repair/: classify.py  loop.py  patch.py
src/rfc2spec/rfc/: io.py  segment.py
src/rfc2spec/run/: harness.py
src/rfc2spec/spec/: iospec.py
src/rfc2spec/util/: logging.py
