[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfc2spec"
version = "0.1.0"
description = "AutoSpec-style MVP: RFC/spec -> structured model -> executable spec -> generated protocol tests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "typer>=0.12",
  "rich>=13.7",
  "networkx>=3.2",
]

[project.scripts]
rfc2spec = "rfc2spec.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rfc2spec*"]
exclude = ["out*"]
